<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/bem_vindo"
            android:textSize="25sp" />

        <Button
            android:id="@+id/f_ong"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@android:dimen/app_icon_size"
            android:background="@android:drawable/alert_dark_frame"
            android:backgroundTint="@android:color/holo_green_light"
            android:baselineAligned="false"
            android:text="@string/ongs"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/f_doacoes"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@android:dimen/app_icon_size"
            android:background="@android:drawable/alert_dark_frame"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/doa_es"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/f_atividade"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@android:drawable/alert_dark_frame"
            android:backgroundTint="@android:color/holo_orange_light"
            android:text="@string/atividades"
            tools:targetApi="lollipop" />

    </LinearLayout>

    <Button
        android:id="@+id/logout"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_gravity="end"
        android:text="@string/logout"
        android:textColor="@color/cardview_dark_background"
        android:onClick="logout"/>



</LinearLayout>