<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tcc.tcc.DoaMatActivity"
    tools:layout_editor_absoluteY="73dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/o_que_deseja_doar"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="32dp"
        android:text="@string/categoria"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/spinner_obj"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinner_obj" />

    <Spinner
        android:id="@+id/spinner_obj"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="26dp"
        app:layout_constraintBottom_toTopOf="@+id/nom_obj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/adicionar_foto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:text="@string/adicionar_foto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_obj"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/descricao_obj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:layout_marginStart="32dp"
        android:text="@string/descri_o"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/desc_obj"
        app:layout_constraintEnd_toStartOf="@+id/desc_obj"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioOP"
        android:layout_width="576dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/enviar_obj"
        app:layout_constraintStart_toStartOf="parent">


        <RadioButton
            android:id="@+id/radio_levar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/levarei_pessoalmente" />

        <RadioButton
            android:id="@+id/radio_retirar"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:text="@string/vir_retirar" />


    </RadioGroup>


    <EditText
        android:id="@+id/desc_obj"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/descricao_obj"
        app:layout_constraintTop_toBottomOf="@+id/nom_obj"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/nome_obj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="31dp"
        android:text="@string/nome"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/nom_obj"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/nom_obj"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="129dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nome_obj"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/enviar_obj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="148dp"
        android:text="@string/enviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
