<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_google"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tcc.tcc.GoogleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/photoImageView"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_margin="8dp"
            android:background="@color/colorAccent" android:contentDescription="@string/google" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="16sp" />


        <Button
            android:id="@+id/g_ong"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@android:dimen/app_icon_size"
            android:background="@android:drawable/alert_dark_frame"
            android:backgroundTint="@android:color/holo_green_light"
            android:baselineAligned="false"
            android:text="@string/ongs"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/g_doacoes"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@android:dimen/app_icon_size"
            android:background="@android:drawable/alert_dark_frame"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/doa_es"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/g_atividade"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@android:drawable/alert_dark_frame"
            android:backgroundTint="@android:color/holo_orange_light"
            android:text="@string/atividades"
            tools:targetApi="lollipop" />


    </LinearLayout>






</LinearLayout>