<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackgroundFloating"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context="com.example.tcc.tcc.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/entrar_facebook"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:background="?attr/actionModeSplitBackground"
        android:text="@string/entrar_com_facebook"
        android:layout_marginBottom="17dp"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/entrar_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/entrar_google"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="?attr/colorError"
        android:text="@string/entrar_com_google"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/conta_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entrar_facebook" />

    <Button
        android:id="@+id/conta_email"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorButtonNormal"
        android:layout_marginBottom="33dp"
        android:text="@string/entrar_com_email"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entrar_google" />

    <Button
        android:id="@+id/cadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:background="?attr/colorBackgroundFloating"
        android:text="@string/cadastre_se"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conta_email" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="11dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/todo"
        android:src="@mipmap/maos"
        app:layout_constraintBottom_toTopOf="@+id/entrar_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Constrain ira definir onde ficará o botão-->
</android.support.constraint.ConstraintLayout>
