<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tcc.tcc.ResetActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/entre_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:text="@string/entre_com_seu_email"
        android:textColor="@color/cardview_dark_background"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/rec_email"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="66dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="65dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/enviar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entre_email"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/enviar"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="136dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="136dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="320dp"
        android:background="@android:drawable/alert_dark_frame"
        android:backgroundTint="#303F9F"
        android:text="@string/enviar"
        android:textColor="@color/cardview_light_background"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.984"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entre_email" />


</android.support.constraint.ConstraintLayout>
